@@ -38,6 +38,7 @@
 * Upgrade Spring and Jetty dependencies for compatibility with java 9/10
 * Fix DWR Warning LOG messages about enum's not having a Javascript property
 * Do not allow spaces in permissions
+* Adding ability for publishers to publish a data point's runtime attributes.
 
 *Version 3.4.5*
 * Content Security Policy (CSP) is now disabled by default and the configuration options have changed, please review the new setting names and update your env.properties file if you want to continue using CSP
